<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themedPracticeBackground">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="27dp"
        android:layout_marginEnd="27dp"
        android:clickable="true"
        app:backgroundTint="@color/themedCheckBox"
        app:srcCompat="@drawable/ic_arrow_forward_black_24dp" />

    <TextView
        android:id="@+id/displayCheckAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="34dp"
        android:layout_weight="1"
        android:background="@color/themedGreen"
        android:elevation="0dp"
        android:padding="10dp"
        android:text="Correct!"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_rounded_word"
        android:orientation="vertical"
        android:paddingLeft="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/displayWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Vivacious"
                android:textAlignment="center"
                android:textColor="@color/themedOffBlack"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:elevation="0dp"
                    app:srcCompat="@drawable/ic_sign_question" />

                <TextView
                    android:id="@+id/displayNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_weight="0.5"
                    android:text="10/10"
                    android:textAlignment="viewStart"
                    android:textColor="@color/themedOffBlack"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/definitionOne"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:background="@drawable/shape_rounded_definitions_green"
            android:orientation="vertical">

            <TextView
                android:id="@+id/displayDefinitionOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="of, like or pertaining to commands or leadership"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/definitionTwo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:background="@drawable/shape_rounded_definitions_blue"
            android:orientation="vertical">

            <TextView
                android:id="@+id/displayDefinitionTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="revolving movement; convolution; whorl"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/definitionThree"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:background="@drawable/shape_rounded_definitions_purple"
            android:orientation="vertical">

            <TextView
                android:id="@+id/displayDefinitionThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="red crystalline mercuric sulfide pigment; deep red or scarlet colour"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/definitionFour"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/displayDefinitionFour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_rounded_definitions_red"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="attractively lively and animated"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>