...
                    android:text="First Score:"
                    android:textAlignment="viewStart"
                    android:textColor="@color/themedOffBlack"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/previewQuizScoreFirst"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
...
                android:text="First 3 Perfect Scorers:"
                android:textAlignment="viewStart"
                android:textColor="@color/themedBlue"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/previewQuizScorePerfect1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
...
                android:text="--------"
                android:textAlignment="center" />

        </LinearLayout>

        <Button
            android:id="@+id/previewPracticeQuizButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@color/themedHighlightYellow"
            android:text="Practice Quiz" />
...
