...
            android:layout_marginBottom="20dp"
            android:text="Quiz, Score and Rank against other Students"
            android:textAlignment="center"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:backgroundTint="@color/themedBlue"
            android:ems="10"
            android:hint="Enter Your Username"
            android:imeOptions="actionDone"
            android:inputType="text|textNoSuggestions" />

        <Button
            android:id="@+id/buttonLogin"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:backgroundTint="@color/themedBlue"
            android:text="Login" />
...
